tests/parsing/smtlib/v2.7/errors/075_define-funs-rec_unclosed_1.smt2
(set-logic ALL)
(define-funs-rec ((foo () bar)) (foobar) _)
